Remove overload of saveAsBD1 method